[package]
name = "test_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { workspace = true }
volatile = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
spin = { workspace = true }
x86_64 = { workspace = true }

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
